# picosky-tui

./: Cargo.toml  LICENSE  README.md
src/: main.rs
