[package]
name = "picosky-tui"
version = "0.1.0"
edition = "2021"
authors = ["<onzecki@onz.ee>"]

[dependencies]
futures = "0.3.31"
futures-util = { version = "0.3.31", features = ["sink"] }
reqwest = { version = "0.12.8", features = ["json"] }
reqwest-websocket = "0.4.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
