[package]
name = "picosky-tui"
version = "0.1.0"
edition = "2021"
authors = ["<onzecki@onz.ee>"]

[dependencies]
color-eyre = "0.6.3"
futures = "0.3.31"
futures-util = { version = "0.3.31", features = ["sink"] }
ratatui = "0.28.1"
reqwest = { version = "0.12.8", features = ["json"] }
reqwest-websocket = "0.4.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tui-input = "0.10.1"
